--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -14,7 +14,7 @@
             android:id="@+id/tvTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Bienvenido a Nombre-Género"
+            android:text="Bienvenidos a Nombre-Género"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -31,7 +31,7 @@
             android:id="@+id/etNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Ariel"
+            android:hint="Ej: Ariel"
             android:inputType="textPersonName"
             android:padding="8dp"
             android:background="@android:drawable/edit_text" />
