--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,6 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.NombreGeneroV1" parent="Base.Theme.NombreGeneroV1" />
+    <!--<style name="Theme.NombreGeneroV1" parent="Base.Theme.NombreGeneroV1" /> -->
+
 </resources>
